objects/CCP_Assignment__c.object
<CustomObject>
    <description>Cadence Chanel Partner Assignments</description>
    <fields>
        <fullName>CCP_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CCP Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CCP_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <picklist>
            <picklistValues>
                <fullName>Indirect</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>CCP Assignments</relationshipLabel>
        <relationshipName>CCP_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CCP Assignments</relationshipLabel>
        <relationshipName>CCP_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upsert_Key__c</fullName>
        <externalId>true</externalId>
        <label>Upsert Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>VAR_Email__c</fullName>
        <label>VAR Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CCP Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Channel_Type__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>Partner__c</columns>
        <columns>Primary_Partner__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CCP_Manager__c</columns>
        <columns>VAR_Email__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>CCP Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CCP Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>